Fix image width on smaller screens

--- a/assets/less/adriaan.less
+++ b/assets/less/adriaan.less
@@ -7,7 +7,6 @@ li small {
 .entry-content {
 
   img {
-    max-width: 640px;
     max-height: 480px;
     border: 1px solid rgb(209, 209, 209);
     padding: 5px;
